[BE] Course 엔티티의 @Embeddable 클래스 제거 (Category, Stack)